# django-admin-global-search

./: .pylintrc  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml  release.yml
admin_global_search/: admin.py  apps.py  models.py  tests.py  views.py
admin_global_search/templates/admin/: base_site.html
admin_global_search/templates/admin_global_search/: results.html
dev/dev/: asgi.py  settings.py  urls.py  wsgi.py
dev/music/: admin.py  models.py
dev/music/migrations/: 0001_initial.py  0002_fake_data.py
