[tool.poetry]
name = "admin_global_search"
version = "0.0.1"
description = "A global search for Django Admin UI"
authors = ["Stanislav Filin <stasfilin@hotmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
faker = "^23.1.0"
django = "^5.0.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
