[tool.poetry]
name = "django-admin-global-search"
version = "0.0.1"
description = "A global search for Django Admin UI"
authors = ["Stanislav Filin <stasfilin@hotmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [
    { include = "admin_global_search" },
    { include = "admin_global_search/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
faker = "^23.1.0"
django = "^5.0.2"
isort = "^5.13.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
