[tool.poetry]
name = "django-admin-global-search"
version = "0.0.4"
description = "A global search for Django Admin UI"
authors = ["Stanislav Filin <stasfilin@hotmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
homepage = "https://github.com/stasfilin/django-admin-global-search"
repository = "https://github.com/stasfilin/django-admin-global-search"
keywords = ["django", "admin", "global", "search"]
packages = [
    { include = "admin_global_search" },
    { include = "admin_global_search/**/*.py" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/stasfilin/django-admin-global-search/issues"

[tool.poetry.dependencies]
python = "^3.8"

django = [
    { version = "^4.2.5", python = "<3.10" },
    { version = "^5.0.8", python = ">=3.10" }
]

[tool.poetry.group.dev.dependencies]
faker = "^23.1.0"
isort = "^5.13.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
